--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -10,5 +10,5 @@ jobs:
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
+          push: true
           tags: pilzbot:latest
-          registry: docker.pkg.github.com
