--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "start": "node main.js"
     },
     "dependencies": {
-        "discord.js": "latest"
+        "discord.js": "latest",
+        "rss-parser": "latest"
     }
 }
